--- a/gestione-orari/package.json
+++ b/gestione-orari/package.json
@@ -2,19 +2,28 @@
   "name": "gestione-orari",
   "version": "1.0.0",
   "description": "Un sistema distribuito per la gestione dei corsi Universitari, degli orari, e delle aule ",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "server": "nodemon ./build/app.js",
+    "ts": "tsc -w"
   },
   "author": "Serge Benissanh Date <Ovrclockz@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bookshelf": "^0.12.1",
     "ejs": "^2.5.7",
-    "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "nodemon": "^1.14.12",
-    "sqlite3": "^3.1.13"
+    "mongoose": "^5.0.6",
+    "nodemon": "^1.14.12"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
+    "@types/knex": "^0.14.7",
+    "@types/node": "^9.4.6",
+    "@types/sqlite3": "^3.1.1",
+    "npm": "^5.6.0"
   }
 }
