--- a/gestione-orari/package.json
+++ b/gestione-orari/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "bookshelf": "^0.12.1",
     "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.6",
-    "nodemon": "^1.14.12"
+    "knex": "^0.14.3",
+    "nodemon": "^1.14.12",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
