--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ gestione-orari/node_modules/
 gestione-orari/build/Controllers/
 gestione-orari/build/Interfaces/
 gestione-orari/build/Models/
+gestione-orari/build/app.js
+gestione-orari/build/server.js
