--- a/gestione-orari/package.json
+++ b/gestione-orari/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.14.3",
     "nodemon": "^1.14.12",
     "sonar-scanner": "^3.0.3",
+    "sqlite3": "^3.1.13",
     "typescript": "^2.7.2"
   },
   "devDependencies": {
